--- a/复习笔记.md
+++ b/复习笔记.md
@@ -30,12 +30,12 @@
 
 * 一种能在**不确定**环境中执行**各种拟人任务**并**达到预期目标**的机器
 
-### 人工智能（学科）
+### 人工智能（学科）✦
 
 * 人工智能（学科）是计算机科学中涉及**研究、设计和应用智能机器**的一个**分支**。
 * 近期主要目标在于研究用机器来**模仿和执行人脑的某些智力功能**，并开发相关理论和技术。
 
-### 人工智能（能力）
+### 人工智能（能力）✦
 
 人工智能（能力）是智能机器所执行的通常**与人类智能有关的智能行为**，如判断、推理、证明、识别、感知、理解、通信、设计、思考、规划、学习和问题求解等思维活动。
 
@@ -60,13 +60,13 @@
 
 ## 人工智能的各种认知观
 
-### 对比
+### 对比✦
 
 |                  | 符号主义                             | 连接主义                               | 行为主义                        |
 | ---------------- | ------------------------------------ | -------------------------------------- | ------------------------------- |
 | 认为人工智能源于 | 数理逻辑                             | 仿生学                                 | 控制论                          |
 | 原理             | 基于物理符号系统假设和有限合理性原理 | 基于神经网络及其间的连接机制与学习算法 | 基于控制论及感知—动作型控制系统 |
-| 基本单元         | 符号                                 | 神经元                                 | 感知和行动                      |
+| 基本单元         | 符号                                 | 神经元                                 | （取决于）感知和行动            |
 | 研究方法         | 功能模拟法                           | 结构模拟法                             | 行为模拟法                      |
 
 ### 符号主义/逻辑主义/心理学派
@@ -143,6 +143,8 @@
 6. 条件性迁移
 
 ### 假设/假说
+
+> 系统智能 ⇔上述6种功能
 
 * 系统智能，必定具备上述6种功能；
 * 系统具有上述6种功能，能够表现出智能
@@ -293,7 +295,7 @@
 1. [假设/假说](#假设/假说)
 1. [三个推论](#三个推论)
 
-### 1-6 现在人工智能有哪些学派？它们的认知观是什么？
+### 1-6 现在[人工智能有哪些学派](#人工智能的各种认知观)？它们的认知观是什么？
 
 1. 符号主义(Symbolicism)/逻辑主义(Logicism)/心理学派(Psychlogism)/计算机学派(Computerism)
 
@@ -427,13 +429,13 @@
 
    2. pushbox (V) ：表示猴子把箱子推到水平位置V
 
-      > 要应用算符pushbox（V），就要求规则的左边，猴子与箱子必须在同一位置上，并且，猴子不是箱子顶上。这种强加于操作的适用性条件，叫做产生式规则的先决条件。
+      > 要应用算符pushbox（V），就要求规则的左边，猴子与箱子必须在同一位置上，并且，猴子不是箱子顶上。这种强加于操作的适用性条件，叫做产生式规则的**先决条件**。
 
-      $(W,0,Y,z) \dfrac{pushbox(V)}{} (W,0,Y,z)$
+      $(W,0,W,z) \dfrac{pushbox(V)}{} (V,0,V,z)$
 
    3. climbbox：猴子爬上箱顶
 
-      $(W,0,Y,z) \dfrac{climbbox(V)}{} (W,1,Y,z)$
+      $(W,0,Y,z) \dfrac{climbbox}{} (W,1,Y,z)$
 
    4. grasp：表示猴子摘到香蕉
 
@@ -447,7 +449,7 @@
 
    2. 操作序列集合 F
 
-      {goto(b), pushbox(c), climbbox, grasp}
+      {goto(a),goto(b),goto(c),pushbox(a),pushbox(b),pushbox(c),climbbox,grasp}
 
    3. 目标状态集合 G
 
@@ -463,20 +465,20 @@
 
 1. 状态
 
-   用一个三元表列(N~x~,N~y~,C)来表示修道士和野人在河的左岸的状态
+   用一个三元表列(N~x~,N~y~,C)来表示修道士和野人在河的右岸的状态
 
-   * N~x~表示修道士在左岸的实际人数
-   * N~y~表示野人在左岸的实际人数
-   * C用来指示船是否在左岸
-     * C=1表示在左岸
-     * C=0表示在右岸
+   * N~x~表示修道士在右岸的实际人数
+   * N~y~表示野人在右岸的实际人数
+   * C用来指示船是否在右岸
+     * C=1表示在右岸
+     * C=0表示在左岸
 
 2. 算符
 
-   1. L(i,j)：表示把i个修道士和j个野人从左岸运输到右岸
-   2. R(i,j)：表示把i个修道士和j个野人从右岸运输到左岸
+   1. L(i,j)：表示把i个修道士和j个野人从右岸运输到左岸
+   2. R(i,j)：表示把i个修道士和j个野人从左岸运输到右岸
 
-   > 约束：i+j <= 2，N~x~ >= N~y~ 
+   > 约束：i+j <= 2，N~x~ >= N~y~， 3-N~x~ >= 3-N~y~ 
 
 3. 状态空间
 
@@ -559,9 +561,9 @@
 
 #### PPT
 
-1. 状态空间法是一种基于解答空间的问题表示和求解方法，它是以状态和操作符为基础的。在利用状态空间图表示时,从某个初始状态开始,每次加一个操作符,递增地建立起操作符的试验序列,直到达到目标状态为止.由于状态空间法需要扩展过多的节点,容易出现“组合爆炸”,因而只适用于表示比较简单的问题。
+1. 状态空间法是一种基于解答空间的问题表示和求解方法，它是以状态和操作符为基础的。在利用状态空间图表示时,从某个初始状态开始,每次加一个操作符,递增地建立起操作符的试验序列,直到达到目标状态为止.由于**状态空间法**需要扩展过多的节点,容易出现“**组合爆炸**",因而只适用于表示比较简单的问题。
 2. 问题归约法从目标（要解决的问题）出发,逆向推理,通过一系列变换把初始问题变换为子问题集合和子子问题集合,直至最后归约为一个平凡的本原问题集合.这些本原问题的解可以直接得到,从而解决了初始问题,用与或图来有效地说明问题归约法的求解途径。
-3. 状态空间法是问题归约法的一种特例。在问题归约法的与或图中,包含有与节点和或节点，而在状态空间法中只含有或节点。
+3. 状态空间法是问题归约法的一种**特例**。在问题归约法的与或图中,包含有**与节点和或节点**，而在状态空间法中只含有**或节点**。
 
 #### chatGPT-4
 
@@ -717,13 +719,13 @@ f(x1,x2,x3,…,xn)
 
 \~：否定（非）\~P
 
-∧：合取（与）PQ
+∧：合取（与）P∧Q
 
-∨：析取（或）PQ
+∨：析取（或）P∨Q
 
-→：蕴涵P→Q(if P then Q）
+⇒：蕴涵P⇒Q(if P then Q）
 
-↔：等价P↔Q
+ ⇔：等价P ⇔Q
 
 #### 量词
 
@@ -749,7 +751,7 @@ $\forall $（存在量词）：“有些”、“至少一个”、“存在”
 
 * 原子谓词公式是合式公式。
 * 若A为合式公式，则～A也是一个合式公式。
-* 若A和B都是合式公式，则(A∧B)，(A∨B)，(A → B)和(A←→B)也都是合式公式。
+* 若A和B都是合式公式，则(A∧B)，(A∨B)，(A ⇒ B)和(A ⇔B)也都是合式公式。
 * 若A是合式公式，x为A中的自由变元，则(∀ x)A和(ョ x)A都是合式公式。
 * 只有按上述规则求得的那些公式，才是合式公式。
 
@@ -1037,7 +1039,7 @@ s称为{E i}的合一者。
 
 ###### 举例
 
-1. 由于 TOY-HOUSE77 是 TOY-HOUSE 的一个实例 , 所以它必须有两个部件 , 一个是砖块 , 另一个是楔块 (wedge) 。另外 , 作为玩具房的一个部件的砖块必须 支撑楔块。在图中 , 玩具房 -77 部件以及它们之间的链 , 都用虚线画的节点和箭头来表示。因为这些知识是通过继承而间接知道的 , 并不是通过实际的节点和链直接知道的。因此，虚线所表示的节点以及箭头所表示的链是虚节点和虚链。
+1. 由于 TOY-HOUSE77 是 TOY-HOUSE 的一个实例 , 所以它必须有两个部件 , 一个是砖块 , 另一个是楔块 (wedge) 。另外 , 作为玩具房的一个部件的砖块必须 支撑楔块。在图中 , 玩具房 -77 部件以及它们之间的链 , 都用虚线画的节点和箭头来表示。因为这些知识是**通过继承而间接知道**的 , 并不是通过实际的节点和链直接知道的。因此，虚线所表示的节点以及箭头所表示的链是虚节点和虚链。
 
    ![image-20230501164335028](assets/image-20230501164335028.png)
 
@@ -1064,13 +1066,13 @@ s称为{E i}的合一者。
    3. Mary是接受者（Receiver）
    4. Gift则是给出的东西（Thing）
 
-2. 转换为二元关系：Isa(G1,Givig-Event)∧Giver(G1,John)∧Receiver(G1,Mary)∧Thing(G1,Gift)
+2. 转换为二元关系：Isa(G1,Giving-Event)∧Giver(G1,John)∧Receiver(G1,Mary)∧Thing(G1,Gift)
 
 3. 画出多元语义网络
 
    ![image-20230501165243997](assets/image-20230501165243997.png)
 
-#### 内尔是一头大象
+#### 内尔是一头大象✦
 
 Use semantic networks to represent the followings:
 
@@ -1106,7 +1108,7 @@ Use semantic networks to represent the followings:
 
 A computer system is intelligent if it can perform a task which,if performed by a human, requires intelligence.
 
-#### 方法一
+#### 方法一（推荐）
 
 1. 先定义基本的谓词
 
@@ -1118,7 +1120,11 @@ A computer system is intelligent if it can perform a task which,if performed by 
 
 2. 上面的句子可以表达为
 
-   (∀ x){(ョt) (ョy)[HMN(y) ∧PERFORM(y,t) ∧REQUIRE(t) ∧CMP(x) ∧PERFORM(x,t)]→INTLT(x) }
+   (∀ x){(ョt) (ョy)[HMN(y) ∧PERFORM(y,t) ∧REQUIRE(t) ∧CMP(x) ∧PERFORM(x,t)]⇒INTLT(x) }
+   
+   > * t：a task
+   > * x：a computer system
+   > * y：a human
 
 #### 方法二
 
@@ -1130,7 +1136,7 @@ A computer system is intelligent if it can perform a task which,if performed by 
 
 4. I(x):x is intelligent(x是智能的)
 
-   (∀ x)(ョy)((C(x)∧P(x,y)∧P(human,y)∧Q(y))→I(x))
+   (∀ x)(ョy)((C(x)∧P(x,y)∧P(human,y)∧Q(y))⇒I(x))
 
 ### 2-8 把下列语句表示成语义网络描述
 
@@ -1199,7 +1205,7 @@ A computer system is intelligent if it can perform a task which,if performed by 
 
 #### 伪代码
 
-1. G←S0,open ← S~0~;
+1. G←S~0~,open ← S~0~;
 2. closed() ←( );
 3. loop: if open=( ) then return FAIL
 4. n←fisrt(open);
@@ -1234,7 +1240,7 @@ A computer system is intelligent if it can perform a task which,if performed by 
 
 1. 以接近起始节点的程度逐层扩展节点
 2. 没有先验知识
-3. OPEN表是队列
+3. OPEN表是**队列**
 4. CLOSED表是一个顺序表，表中各节点按顺序编号，正被考察的节点在表中编号最大。
 5. 完备性：如果有解，则必能找到
 6. 通用性：广度优先搜索策略与问题无关，具有通用性。
@@ -1243,27 +1249,6 @@ A computer system is intelligent if it can perform a task which,if performed by 
 ##### 算法框图
 
 ![image-20230501175023798](assets/image-20230501175023798.png)
-
-
-
-#### 深度优先/纵向搜索
-
-##### 特点
-
-1. 首先扩展最新产生的(即最深的)节点。
-2. OPEN表是栈
-3. CLOSED表是一个顺序表，表中各节点按顺序编号，正被考察的节点在表中编号最大。
-4. 一般不能保证找到最优解。
-5. 当深度限制不合理时，可能找不到解，可以将算法改为可变深度限制，即有界深度优先搜索。
-6. 最坏情况时，搜索空间等同于穷举。
-
-##### 深度界限
-
-防止搜索过程沿着无益的路径扩展下去，往往给出一个节点扩展的最大深度
-
-##### 算法框图
-
-![image-20230501175736441](assets/image-20230501175736441.png)
 
 ##### 例题
 
@@ -1276,6 +1261,42 @@ A computer system is intelligent if it can perform a task which,if performed by 
 从下图（八数码难题的宽度优先搜索树）所示，要扩展26个节点，共生成46个节点之后才求得解（目标节点）。
 
 ![image-20230503101055709](assets/image-20230503101055709.png)
+
+#### 深度优先/纵向搜索
+
+##### 特点
+
+1. 首先扩展最新产生的(即最深的)节点。
+2. OPEN表是栈
+3. CLOSED表是一个顺序表，表中各节点按顺序编号，正被考察的节点在表中编号最大。
+4. 一般不能保证找到最优解。
+5. 当深度限制不合理时，可能找不到解，可以将算法改为可变**深度限制**，即有界深度优先搜索。
+6. 最坏情况时，搜索空间等同于穷举。
+
+##### 深度界限
+
+防止搜索过程沿着无益的路径扩展下去，往往给出一个节点扩展的最大深度
+
+##### 算法框图
+
+![image-20230501175736441](assets/image-20230501175736441.png)
+
+
+##### 例题
+
+八数码难题（8-puzzle problem） 
+
+![image-20230502124930042](assets/image-20230502124930042.png)
+
+规定：将牌移入空格的顺序为：从空格左边开始顺时针旋转。不许斜向移动，也不返回先辈节点。
+
+###### 深度优先搜索
+
+![image-20230506104936995](assets/image-20230506104936995.png)
+
+###### 有界深度优先搜索
+
+![image-20230506104954034](assets/image-20230506104954034.png)
 
 #### 等代价搜索
 
@@ -1344,7 +1365,7 @@ f(x)=g(x)
 
 f(x)=g(x)+h(x)
 
-#### A\*算法✦
+#### A\*算法
 
 > A\*算法只要有解，就一定是最佳解
 
@@ -1363,9 +1384,9 @@ f(x)=g(x)+h(x)
 
 ![image-20230501182636160](assets/image-20230501182636160.png)
 
-##### 八数码难题
+##### 八数码难题✦
 
-![image-20230502124930042](assets/image-20230502124930042.png)
+![image-20230506164005460](assets/image-20230506164005460.png)
 
 ###### h(x)=错放棋子数
 
@@ -1414,17 +1435,19 @@ f(x)=g(x)+h(x)
 
 ### 消解的过程
 
-消解规则应用于母体子句对，以便产生倒出
+消解规则应用于母体子句对，以便产生导出
 
-### 子句集的求取（9个步骤）
+### 子句集的求取（9个步骤）★
+
+> 要背熟，做题时要按步骤求解，至少要记得哪一步要干什么
 
 将下列谓词演算公式化为一个子句集 
 
-(∀x)｛P(x) → {(∀y)［P(y) → P(f(x,y))］∧ ～(∀y)[Q(x,y) → P(y)］｝｝
+(∀x)｛P(x) ⇒ {(∀y)［P(y) ⇒ P(f(x,y))］∧ ～(∀y)[Q(x,y) ⇒ P(y)］｝｝
 
 1. 消去蕴涵符号
 
-    应用∨和～符号，以～A∨B替换A → B。
+    应用∨和～符号，以～A∨B替换A ⇒ B。
 
    ![image-20230501194321689](assets/image-20230501194321689.png)
 
@@ -1496,7 +1519,9 @@ f(x)=g(x)+h(x)
 
 取两个子句的析取，然后消去互补对，得到消解式
 
-#### 消减式例子
+#### 消减式例子★
+
+> 要烂熟于心，[消解反演求空子句](#消解反演)会要用到
 
 1. 假言推理 Modus ponens
 
@@ -1519,6 +1544,8 @@ f(x)=g(x)+h(x)
    ![image-20230502093740567](assets/image-20230502093740567.png)
 
 5. 链式（三段论） Chain
+
+   > 书上P100的三段论也许有误
 
    ![image-20230502093903632](assets/image-20230502093903632.png)
 
@@ -1570,12 +1597,12 @@ f(x)=g(x)+h(x)
 
          > 我修改了一下，书上P101答案好像有点问题
 
-         1. 前提：(∀x)[(ョy)(S(x,y) ∧ M(y))] → [(ョy)(I(y) ∧ E(x,y))]
-         2. 结论：～(ョx)I(x) → (∀x)(∀y)(M(y) → ～S(x,y))
+         1. 前提：(∀x)[(ョy)(S(x,y) ∧ M(y))] ⇒ [(ョy)(I(y) ∧ E(x,y))]
+         2. 结论：～(ョx)I(x) ⇒ (∀x)(∀y)(M(y) ⇒ ～S(x,y))
 
       3. 将前提和结论的否定[化为子句集](#子句集的求取（9个步骤）)（考试中化简过程可以省略）
 
-         1. 前提：(∀x)[(ョy)(S(x,y) ∧ M(y))] → [(ョy)(I(y) ∧ E(x,y))]
+         1. 前提：(∀x)[(ョy)(S(x,y) ∧ M(y))] ⇒ [(ョy)(I(y) ∧ E(x,y))]
 
             1. 消去蕴含符号
 
@@ -1618,11 +1645,11 @@ f(x)=g(x)+h(x)
 
                无需此步
 
-         2. 结论的否定：～[～(ョx)I(x) → (∀x)(∀y)(M(y) → ～S(x,y))]
+         2. 结论的否定：～[～(ョx)I(x) ⇒ (∀x)(∀y)(M(y) ⇒ ～S(x,y))]
 
             1. 消去蕴含符号
 
-               1. ～[～(ョx)I(x) → (∀x)(∀y)(～M(y) ∨ ～S(x,y))]
+               1. ～[～(ョx)I(x) ⇒ (∀x)(∀y)(～M(y) ∨ ～S(x,y))]
                2. ～[(ョx)I(x) ∨ (∀x)(∀y)(～M(y) ∨ ～S(x,y))]
 
             2. 减少否定符号的辖域
@@ -1692,7 +1719,7 @@ f(x)=g(x)+h(x)
 
          1. 前提
             1. P(A) ∨ P(B) ∨ P(C)
-            2. (P(A) ∧ ~P(B)) → P(C)
+            2. (P(A) ∧ ~P(B)) ⇒ P(C)
             3. P(B) → P(C)
          2. 结论：P(C)
 
@@ -1717,8 +1744,8 @@ f(x)=g(x)+h(x)
    1. 前提
 
       1. P
-      2. (P∧Q)→ R
-      3. (S∨T) → Q
+      2. (P∧Q)⇒ R
+      3. (S∨T) ⇒ Q
       4. T
 
    2. 结论：R
@@ -1782,17 +1809,17 @@ f(x)=g(x)+h(x)
 
 ###### 例题
 
-1. 
+1. 消减反演
 
    1. 前提
 
-   2. 无论JOHN到哪里，FIDO也就去那里
+      1. 无论JOHN到哪里，FIDO也就去那里
 
-   3. JOHN现在学校里。
+      2. JOHN现在学校里。
 
-   4. 结论：FIDO在什么地方是可以确定的。
+   2. 结论：FIDO在什么地方是可以确定的。
 
-   5. 证明
+   3. 证明
 
       1. 原子公式定义与谓词表示 
 
@@ -1808,7 +1835,9 @@ f(x)=g(x)+h(x)
 
       4. 结论成立！
 
-2. 无论JOHN到哪里，FIDO也就去那里; JOHN现在学校里。问：FIDO在什么地方？
+2. 反演求解
+
+   无论JOHN到哪里，FIDO也就去那里; JOHN现在学校里。问：FIDO在什么地方？
 
    ![image-20230502124036272](assets/image-20230502124036272.png)
 
@@ -1823,27 +1852,17 @@ f(x)=g(x)+h(x)
 1. 图搜索的一般过程如下：（描述图搜索（GRAPHSERCH）的一般过程）（用文字或流程图）
 
    1. 建立一个搜索图G(初始只含有起始节点S)，把S放到未扩展节点表中（OPEN表）中。
-
-   2. 建立一个已扩展节点表（CLOSED表），其初始为空表。
-
+2. 建立一个已扩展节点表（CLOSED表），其初始为空表。
    3. LOOP：若OPEN表是空表，则失败退出。
-
-   4. 选择OPEN表上的第一个节点，把它从OPEN表移出并放进CLOSED表中。称此节点为节点n
-
+4. 选择OPEN表上的第一个节点，把它从OPEN表移出并放进CLOSED表中。称此节点为节点n
    5. 若n为一目标节点，则有解并成功退出。此解是追踪图G中沿着指针从n到S这条路径而得到的(指针将在第7步中设置)
-
-   6. 扩展节点n，生成后继节点的集合M。
-
+6. 扩展节点n，生成后继节点的集合M。
    7. 
-         1. 对那些未曾在G中出现过的(既未曾在OPEN表上或CLOSED表上出现过的)M成员设置一个通向n的指针，并将它们加进OPEN表。
-
-         2. 对已经在OPEN或CLOSED表上的每个M成员，确定是否需要将其原来的fu节点改为 n。
-
-         3. 对已在CLOSED表上的每个M成员，若修改了其父节点，则将该节点从 CLOSED 表中移出，重新加入 OPEN 表中。
+      1. 对那些未曾在G中出现过的(既未曾在OPEN表上或CLOSED表上出现过的)M成员设置一个通向n的指针，并将它们加进OPEN表。
+         2. 对已经在OPEN或CLOSED表上的每个M成员，确定是否需要将其原来的父节点改为 n。
+      3. 对已在CLOSED表上的每个M成员，若修改了其父节点，则将该节点从 CLOSED 表中移出，重新加入 OPEN 表中。
    8. 按某一任意方式或按某个试探值，重排OPEN表。
-
-   9. GO LOOP。
-
+9. GO LOOP。
 2. 重排OPEN表意味着，在第(6)步中，将优先扩展哪个节点，**不同的排序标准对应着不同的搜索策略**。
 
 重排的原则当视具体需求而定，不同的原则对应着不同的搜索策略，如果想尽快地找到一个解，则应当将最有可能达到目标节点的那些节点排在OPEN表的前面部分，如果想找到代价最小的解，则应当按代价从小到大的顺序重排OPEN表。
@@ -1854,7 +1873,7 @@ f(x)=g(x)+h(x)
 
 ### 3-7 下列八数码难题：用A\*算法绘出八数码难题的搜索树；标记OPEN表、CLOSED表的节点；写出从初始状态到目标状态的最优解
 
-[详见](#八数码难题)
+[详见](#八数码难题✦)
 
 ### 3-12  把下列句子变换成子句形式
 
@@ -1870,7 +1889,7 @@ f(x)=g(x)+h(x)
 9.	更换变量名称
 
 
-1. (∀x){P(x)→P(x)}
+1. (∀x){P(x)⇒P(x)}
    1. 消去蕴含符号：(∀x){~P(x)∨P(x)}
 
    2. 2-6 无需进行操作
@@ -1879,7 +1898,7 @@ f(x)=g(x)+h(x)
 
    4. 8-9 无需进行操作
 
-2. (∀x)(∀y)(On(x,y)→Above(x,y))
+2. (∀x)(∀y)(On(x,y)⇒Above(x,y))
 
      1. 消去蕴含符号：(∀x)(∀y)(~On(x,y)∨Above(x,y))
 
@@ -1890,7 +1909,7 @@ f(x)=g(x)+h(x)
      4. 8-9 无需进行操作
 
 
-3. (∀x)(∀y)(∀z)(Above(x,y)∧Above(y,z)→Above(x,z))
+3. (∀x)(∀y)(∀z)(Above(x,y)∧Above(y,z)⇒Above(x,z))
 
    > 蕴含的优先级低于∧
    
@@ -1905,7 +1924,7 @@ f(x)=g(x)+h(x)
       1. 8-9 无需进行操作
 
 
-4. \~((∀x)P(x)→((∀y)(P(y)→P(f(x,y)))∧(∀y)(Q(x,y)→P(y)))))
+4. \~((∀x)P(x)⇒((∀y)(P(y)⇒P(f(x,y)))∧(∀y)(Q(x,y)⇒P(y)))))
 
    > 太难了，赌它不考
 
@@ -1917,7 +1936,7 @@ f(x)=g(x)+h(x)
 
 ## 计算智能(CI)与人工智能(AI)的区别和关系
 
-* 计算智能是一种智力方式的低层认知，它与人工智能的区别只是认知层次从中层下降至低层而已。中层系统含有知识（精品），低层系统则没有。
+* 计算智能是一种智力方式的低层认知，它与人工智能的区别只是认知层次从中层下降至低层而已。中层系统含有**知识**（精品），低层系统则没有。
 
 * 当一个系统只涉及数值（低层）数据，含有模式识别部分，不应用人工智能意义上的知识，而且能够呈现出
 
@@ -1928,7 +1947,15 @@ f(x)=g(x)+h(x)
 
   则该系统就是计算智能系统。
 
-* 当一个**计算智能**系统以非数值方式加上知识（精品）值，即成为**人工智能系统**。
+* 当一个**计算智能**系统以非数值方式加上**知识**（精品）值，即成为**人工智能系统**。
+
+## 相关术语
+
+* ABC
+  * A－Artificial，表示人工的（非生物的）；
+  * B－Biological，表示物理的＋化学的＋（？）＝生物的；
+  * C－Computational，表示数学＋计算机
+* 
 
 ![image-20230502163107671](assets/image-20230502163107671.png)
 
@@ -2248,6 +2275,8 @@ todo
 
    1. 原理
 
+      ![image-20230506164241989](assets/image-20230506164241989.png)
+
       1. 做一个单位圆，然后按各个染色体的选择概率将圆面划分为相应的扇形区域
       2. 转动轮盘，轮盘静止时指针指向某一扇区，即为选中扇区，相应的个体/染色体即被选中
 
@@ -2405,6 +2434,8 @@ todo
 2. [步骤](#遗传算法步骤)
 
 ###  4-16 [用遗传算法求f(x)=xcosx+2的最大值※](https://blog.csdn.net/ErinWang666/article/details/126216970)
+
+> 网上找的，估计算错了
 
 ![image-20230504200410037](assets/image-20230504200410037.png)
 
