--- a/复习笔记.md
+++ b/复习笔记.md
@@ -209,7 +209,7 @@
 
 > 近期目标为远期目标奠定了理论和技术基础，远期目标为近期目标指明了方向。
 
-## 人工智能的研究内容（10个方面）
+## 人工智能的研究内容
 
 1. 认知建模
    浩斯顿将认知归纳为五种模型
@@ -426,7 +426,7 @@
 
    1. goto (U) ：表示猴子走到水平位置U
 
-      $(W,0,Y,z) \dfrac{goto(U)}{} (W,0,Y,z)$
+      $(W,0,Y,z) \dfrac{goto(U)}{} (U,0,Y,z)$
 
    2. pushbox (V) ：表示猴子把箱子推到水平位置V
 
@@ -1077,7 +1077,7 @@ s称为{E i}的合一者。
 
 #### 内尔是一头大象✦
 
-Use semantic networks to represent the followings:
+Use semantic networks（语义网络） to represent the followings:
 
 1. Nellie is an elephant,
 2. he likes apples. 
@@ -1205,7 +1205,7 @@ A computer system is intelligent if it can perform a task which,if performed by 
 3. 选择节点n；
 4. 判断n是否目标节点；
 5. 扩展节点n；
-6. 调整指针；
+6. 修改指针方向；
 7. 重排OPEN表。
 
 #### 伪代码
@@ -1239,7 +1239,7 @@ A computer system is intelligent if it can perform a task which,if performed by 
 
 按预定的控制策略进行搜索，在搜索过程中获得的中间信息并不改变控制策略。 盲目性、效率不高，完备性好。
 
-#### 宽度优先/广度优先/横向搜索搜索
+#### 宽度优先/广度优先/横向搜索
 
 ##### 特点
 
@@ -1391,9 +1391,9 @@ f(x)=g(x)+h(x)
 
 ##### 八数码难题✦
 
-![image-20230506164005460](assets/image-20230506164005460.png)
-
 ###### h(x)=错放棋子数
+
+![image-20230506164005460](assets/image-20230506164005460.png)
 
 1. 估价函数的定义
 
@@ -1408,7 +1408,9 @@ f(x)=g(x)+h(x)
 
    ![image-20230501183102895](assets/image-20230501183102895.png)
 
-###### h(x)=曼哈顿距离
+###### h(x)=曼哈顿距离✦
+
+![image-20230506164005460](assets/image-20230506164005460.png)
 
 1. 估价函数的定义
 
@@ -1442,7 +1444,7 @@ f(x)=g(x)+h(x)
 
 消解规则应用于母体子句对，以便产生导出
 
-### 子句集的求取（9个步骤）★
+### 子句集的求取★
 
 > 要背熟，做题时要按步骤求解，至少要记得哪一步要干什么
 
@@ -1583,7 +1585,7 @@ f(x)=g(x)+h(x)
 
 1. 储蓄问题★（A卷）
 
-   > 本题会有部分改动，会放在一个题目的中间，要认真审题，步骤环环相扣
+   > 本题可能会有部分改动，会放在一个题目的中间，要认真审题，步骤环环相扣
 
    1. 前提：每个储蓄钱的人都获得利息。
 
@@ -1603,7 +1605,7 @@ f(x)=g(x)+h(x)
          > 我修改了一下，书上P101答案好像有点问题
 
          1. 前提：(∀x)[(ョy)(S(x,y) ∧ M(y))] ⇒ [(ョy)(I(y) ∧ E(x,y))]
-         2. 结论：～(ョx)I(x) ⇒ (∀x)(∀y)(M(y) ⇒ ～S(x,y))
+         2. 结论：～[(ョx)I(x)] ⇒ (∀x)(∀y)(M(y) ⇒ ～S(x,y))
 
       3. 将前提和结论的否定[化为子句集](#子句集的求取（9个步骤）)（考试中化简过程可以省略）
 
@@ -1611,12 +1613,12 @@ f(x)=g(x)+h(x)
 
             1. 消去蕴含符号
 
-               (∀x)[～[(ョy)(S(x,y)∧M(y))]] ∨[(ョy)(I(y)∧E(x,y))]
+               (∀x)[～[(ョy)(S(x,y)∧M(y))] ] ∨ [(ョy)(I(y)∧E(x,y))]
 
             2. 减少否定符号的辖域
 
-               1. (∀x)[(～ョy)(～S(x,y) ∨ ～M(y))] ∨[(ョy)(I(y)∧E(x,y))]
-               2. (∀x)[(∀ y)(～S(x,y) ∨ ～M(y))] ∨ [(ョy)(I(y) ∧ E(x,y))]
+               1. (∀x)[(～ョy)(～S(x,y) ∨ ～M(y))] ∨ [(ョy)(I(y)∧E(x,y))]
+               2. (∀x)[(∀y)(～S(x,y) ∨ ～M(y))] ∨ [(ョy)(I(y) ∧ E(x,y))]
 
             3. 对变量标准化
 
@@ -1624,16 +1626,16 @@ f(x)=g(x)+h(x)
 
             4. 消去存在量词
 
-               1. 定义Skolem函数y=f(x)
-               2. (∀x)[(∀ y)(～S(x,y) ∨ ～M(y))] ∨ [(I(f(x)) ∧ E(x,f(x)))]
+               1. 定义Skolem函数：y=f(x)
+               2. (∀x)[(∀y)(～S(x,y) ∨ ～M(y))] ∨ [(I(f(x)) ∧ E(x,f(x)))]
 
             5. 化为前束形
 
-               (∀x)(∀ y)(～S(x,y) ∨ ～M(y)) ∨ [(I(f(x)) ∧ E(x,f(x)))]
+               (∀x)(∀y)(～S(x,y) ∨ ～M(y)) ∨ [(I(f(x)) ∧ E(x,f(x)))]
 
             6. 把母式化为合取范式
 
-               (∀x)(∀ y)[ [～S(x,y) ∨ ～M(y) ∨ I(f(x))] ∧ [～S(x,y) ∨ ～M(y) ∨ E(x,f(x))] ]
+               (∀x)(∀y)[ [～S(x,y) ∨ ～M(y) ∨ I(f(x))] ∧ [～S(x,y) ∨ ～M(y) ∨ E(x,f(x))] ]
 
             7. 消去全称量词
 
@@ -1641,10 +1643,10 @@ f(x)=g(x)+h(x)
 
             8. 消去连词符号∧
 
-               > 化简完的所有字句在答案中必须写出
+               > 化简完的所有子句在答案中必须写出
 
-               * 字句①：～S(x,y) ∨ ～M(y) ∨ I(f(x))
-               * 字句②：～S(x,y) ∨ ～M(y) ∨ E(x,f(x))
+               * 子句①：～S(x,y) ∨ ～M(y) ∨ I(f(x))
+               * 子句②：～S(x,y) ∨ ～M(y) ∨ E(x,f(x))
 
             9. 更换变量名称
 
@@ -1654,12 +1656,12 @@ f(x)=g(x)+h(x)
 
             1. 消去蕴含符号
 
-               1. ～[～(ョx)I(x) ⇒ (∀x)(∀y)(～M(y) ∨ ～S(x,y))]
+               1. ～[～[(ョx)I(x)] ⇒ (∀x)(∀y)(～M(y) ∨ ～S(x,y))]
                2. ～[(ョx)I(x) ∨ (∀x)(∀y)(～M(y) ∨ ～S(x,y))]
 
             2. 减少否定符号的辖域
 
-               1. [～(ョx)I(x) ∧ [～(∀x)(∀y)(～M(y) ∨ ～S(x,y))] ]
+               1. [～(ョx)I(x) ∧ [～[(∀x)(∀y)(～M(y) ∨ ～S(x,y))] ] ]
                2. (∀x)(～I(x)) ∧ [(ョx)(ョy)(M(y) ∧ S(x,y))]
 
             3. 对变量标准化
@@ -1686,23 +1688,23 @@ f(x)=g(x)+h(x)
 
             8. 消去连词符号∧
 
-               > 化简完的所有字句在答案中必须写出
+               > 化简完的所有子句在答案中必须写出
 
-               * 字句③：～I(x)
-               * 字句④：S(a,b)
-               * 字句⑤：M(b)
+               * 子句③：～I(x)
+               * 子句④：S(a,b)
+               * 子句⑤：M(b)
 
             9. 更换变量名称
 
-               * 字句③：～I(z)
-               * 字句④：S(a,b)
-               * 字句⑤：M(b)
+               * 子句③：～I(z)
+               * 子句④：S(a,b)
+               * 子句⑤：M(b)
 
-   4. 消解反演求空子句（NIL）
+      4. 消解反演求空子句（NIL）
 
-      储蓄问题反演树
+         储蓄问题反演树
 
-      ![image-20230502120203955](assets/image-20230502120203955.png)
+         ![image-20230502120203955](assets/image-20230502120203955.png)
 
 2. 某公司招聘工作人员，A，B，C三人应试★（B卷考）
 
@@ -1732,13 +1734,13 @@ f(x)=g(x)+h(x)
 
          1. 前提
 
-            1. P(A) ∨ P(B) ∨ P(C )
-            2. ~P(A) ∨ P(B) ∨ P(C) 
-            3. ~P(B) ∨ P(C), 
+            1. 子句①：P(A) ∨ P(B) ∨ P(C)
+            2. 子句②：~P(A) ∨ P(B) ∨ P(C) 
+            3. 子句③：~P(B) ∨ P(C)
 
          2. 结论的否定
 
-            ~P(C)
+            子句④：~P(C)
 
          3. 证明 
 
@@ -1757,7 +1759,7 @@ f(x)=g(x)+h(x)
 
    3. 证明
 
-      1. 字句集
+      1. 子句集
 
          1. P
          2. ～P ∨～Q ∨ R
@@ -1784,20 +1786,28 @@ f(x)=g(x)+h(x)
 
    3. 证明
 
-      1. 用谓词公式表示前提和结论
+      1. 规定原子公式
+
+         1. Pass(x,y)：x pass y test
+         2. Win(x,y)：x win y
+         3. Happy(x)：x is happy
+         4. Study(x)：x study
+         5. Lucky(x)：x is lucky
+
+      2. 用谓词公式表示前提和结论
 
          1. 前提
 
             ![image-20230502122542783](assets/image-20230502122542783.png)
 
          2. 结论的否定：~Happy（zhang）
-
-      2. 将前提和结论的否定[化为子句集](#子句集的求取（9个步骤）)（考试中化简过程可以省略）
-
+      
+      3. 将前提和结论的否定[化为子句集](#子句集的求取（9个步骤）)（考试中化简过程可以省略）
+      
          ![image-20230502122751316](assets/image-20230502122751316.png)
-
-      3. 消解演绎树/消解反演树
-
+      
+      4. 消解演绎树/消解反演树
+      
          ![image-20230502122830292](assets/image-20230502122830292.png)
 
 ##### 反演求解
@@ -1857,41 +1867,50 @@ f(x)=g(x)+h(x)
 1. 图搜索的一般过程如下：（描述图搜索（GRAPHSERCH）的一般过程）（用文字或流程图）
 
    1. 建立一个搜索图G(初始只含有起始节点S)，把S放到未扩展节点表中（OPEN表）中。
-   
+
    2. 建立一个已扩展节点表（CLOSED表），其初始为空表。
-   
-   3. LOOP：若OPEN表是空表，则失败退出。
-   
-   4. 选择OPEN表上的第一个节点，把它从OPEN表移出并放进CLOSED表中。称此节点为节点n
-   
-   5. 若n为一目标节点，则有解并成功退出。此解是追踪图G中沿着指针从n到S这条路径而得到的(指针将在第7步中设置)
+
+   3. **LOOP**：若OPEN表是空表，则**失败**退出。
+
+   4. 选择OPEN表上的第一个节点 n，把它从OPEN表移出并放进CLOSED表中。
+
+   5. 若n为一目标节点，则有解并**成功**退出。
+
+      > 此解是追踪图G中沿着指针从n到S这条路径而得到的(指针将在第7步中设置)
 
    6. 扩展节点n，生成后继节点的集合M。
-   
-   7. ：
-   
-      1. 对那些未曾在G中出现过的(既未曾在OPEN表上或CLOSED表上出现过的)M成员设置一个通向n的指针，并将它们加进OPEN表。
-      2. 对已经在OPEN或CLOSED表上的每个M成员，确定是否需要将其原来的父节点改为 n。
+
+   7. 修改M成员的指针方向
+
+      1. 对那些未曾在G中出现过的(既未曾在OPEN表上或CLOSED表上出现过的)M成员
+         1. 设置一个通向n的指针
+         2. 将它们加进OPEN表
+      2. 对已经在OPEN或CLOSED表上的每个M成员，确定是否需要将其原来的父节点改为 n
       3. 对已在CLOSED表上的每个M成员，若修改了其父节点，则将该节点从 CLOSED 表中移出，重新加入 OPEN 表中。
+
    8. 按某一任意方式或按某个试探值，重排OPEN表。
-   
-2. GO LOOP。
+
+   9. GO **LOOP**。
 
 2. 重排OPEN表意味着，在第(6)步中，将优先扩展哪个节点，**不同的排序标准对应着不同的搜索策略**。
 
-重排的原则当视具体需求而定，不同的原则对应着不同的搜索策略，如果想尽快地找到一个解，则应当将最有可能达到目标节点的那些节点排在OPEN表的前面部分，如果想找到代价最小的解，则应当按代价从小到大的顺序重排OPEN表。
+3. 重排的原则当视具体需求而定，不同的原则对应着不同的搜索策略
+
+   1. 如果想尽快地找到一个解，则应当将**最有可能**达到目标节点的那些节点排在OPEN表的前面部分
+   2. 如果想找到代价最小的解，则应当按**代价从小到大**的顺序重排OPEN表。
+
 
 ###  3-4 如何通过消减反演求取问题的答案？※
 
 [详见反演求解的过程](#反演求解)
 
-### 3-7 下列八数码难题：用A\*算法绘出八数码难题的搜索树；标记OPEN表、CLOSED表的节点；写出从初始状态到目标状态的最优解
+### 3-7 八数码难题
 
-[详见](#八数码难题✦)
+用A\*算法绘出八数码难题的搜索树；标记OPEN表、CLOSED表的节点；写出从初始状态到目标状态的最优解。[详见](#八数码难题✦)
 
 ### 3-12  把下列句子变换成子句形式
 
-子句集的求取的9个步骤
+子句集的求取的9个步骤：
 1.	消去蕴含符号
 2.	减少否定符号的辖域
 3.	对变量标准化
@@ -1901,6 +1920,8 @@ f(x)=g(x)+h(x)
 7.	消去全称量词
 8.	消去连词符号∧
 9.	更换变量名称
+
+求解：
 
 
 1. (∀x){P(x)⇒P(x)}
@@ -1948,9 +1969,9 @@ f(x)=g(x)+h(x)
 
 # 第4章 计算智能
 
-## 计算智能
+## 计算智能✦
 
-计算智能取决于制造者提供的数值数据，而不依赖于知识。计算智能是智力的低层认知。
+计算智能取决于制造者提供的**数值数据**，而**不依赖于知识**。计算智能是智力的**低层**认知。
 
 ## 计算智能系统
 
@@ -1968,7 +1989,7 @@ f(x)=g(x)+h(x)
 
 ## 计算智能(CI)与人工智能(AI)的区别和关系✦
 
-* 计算智能是一种智力方式的低层认知，它与人工智能的区别只是认知层次从中层下降至低层而已。中层系统含有**知识**（精品），低层系统则没有。
+* 计算智能是一种智力方式的低层认知，它与人工智能的区别只是认知层次从**中层**下降至**低层**而已。中层系统含有**知识**（精品），低层系统则没有。
 * 当一个**计算智能**系统以非数值方式加上**知识**（精品）值，即成为**人工智能系统**。
 
 ## 相关术语
@@ -2362,19 +2383,23 @@ todo
    2. 取值范围：0.0001-0.1
 5. 染色体编码：长度L
 
-#### 基本原理
+#### 基本原理✦
 
-在遗传算法中，通过随机方式产生若干个所求解问题的数字编码，即染色体，形成初始群体；通过适应度函数给每个个体一个数值评价，淘汰低适应度的个体，选择高适应度的个体参加遗传操作，经过遗传操作后的个体集合形成下一代新的种群。对这个新种群进行下一轮进化。
+* 通过**随机**方式产生若干个所求解问题的数字编码（染色体），形成**初始群体**；
+* 通过**适应度**函数给每个个体一个**数值评价**
+  * **淘汰低**适应度的个体
+  * **选择高**适应度的个体参加遗传操作（交叉、变异）
+* 经过遗传操作后的个体集合形成**下一代**新的种群。对这个新种群进行下一轮进化。
 
 #### 遗传算法步骤✦
 
-1. 初始化群体;
-2. 计算群体上每个个体的适应度值;
-3. 按由个体适应度值所决定的某个规则选择将进入下一代的个体;
-4. 按概率Pc进行交叉操作;
-5. 按概率Pm进行突变操作;
-6. 若没有满足某种停止条件，则转第(2)步，否则进入下一步。
-7. 输出群体中适应度值最优的染色体作为问题的满意解或最优解。 
+1. **初始化**群体;
+2. 计算群体上每个个体的**适应度**值;
+3. 按由个体适应度值所决定的某个规则**选择**将进入下一代的个体;
+4. 按概率Pc进行**交叉**操作;
+5. 按概率Pm进行**突变**操作;
+6. 若没有满足某种**停止条件**，则转第(2)步，否则进入下一步。
+7. **输出**群体中**适应度值最优**的染色体作为问题的满意解或最优解。 
 
 #### 算法流程图
 
@@ -2443,7 +2468,7 @@ todo
 
 ### 4-1 计算智能的含义是什么？它涉及哪些研究分支？
 
-1. 含义：贝兹德克认为计算智能取决于制造者提供的数值数据，而不依赖于知识。计算智能是智力的低层认知。
+1. [含义](#计算智能✦)
 2. 主要的研究领域：神经计算，模糊计算，进化计算，人工生命。
 
 ### 4-6 设计一个神经网络，用于计算含有两个输入的XOR函数。
@@ -2510,7 +2535,7 @@ todo
 
    归纳断言（假设）*H*，能重言蕴涵或弱蕴涵观察陈述，并满足背景知识。
 
-### 归纳概括规则（5条）
+### 归纳概括规则
 
 ![image-20230502210049733](assets/image-20230502210049733.png)
 
@@ -2543,7 +2568,16 @@ todo
 
 ##### 算法流程
 
-![image-20230502210654478](assets/image-20230502210654478.png)
+> 按照个人理解修改了一下
+
+1. 如果TR中所有实例分类结果均为C~i~，则返回C~i~;
+2. 从属性表中选择某一属性A作为检测属性;
+3. 假定|∑ValueType(A~i~)|=k，根据不同的ValueType(A~i~)，将TR划分为k个集 TR~1~，TR~2~ ，…，TR~k~;
+   1. ValueType(A~i~)：属性A的第i种取值
+   2. |∑ValueType(A~i~)|=k：属性A有k种不同的取值
+4. 从属性表中去掉已做检验的属性A;
+5. 对每一个i (l≤i≤k)，用 TR~i~，和新的属性表递归调用CLS，生成TR~i~的决策树DTR~i~;
+6. 返回以属性A为根，以DTR~1~，DTR~2~ ，…， DTR~k~为子树的决策树。
 
 ##### 举例
 
@@ -2552,6 +2586,10 @@ todo
 ![image-20230502210751725](assets/image-20230502210751725.png)
 
 #### [决策树学习算法ID3✦](https://github.com/3210448723/HnustExam/blob/main/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E5%A4%8D%E4%B9%A0%E7%AC%94%E8%AE%B0/%E7%AC%94%E8%AE%B0.md)
+
+> 实质上是在CLS的基础上用信息增益的方法来选择决策属性/检测属性
+
+ID3是一种自顶向下增长树的贪婪算法，在每个结点选取能最好地分类样例的属性。继续这个过程直到这棵树能完美分类训练样例，或所有的属性都使用过了。
 
 ##### 信息熵
 
@@ -2585,9 +2623,44 @@ todo
 
 2. 来源PPT（推荐，省略了信息熵的计算细节）
 
-   > A←Athributes中分类Examples能力最好的属性：具有最高信息增益的属性
+   * 输入
+     1. Examples：训练样例集。
+     2. Target_attribute：这棵树要预测的目标属性。
+     3. Attributes：除Target_attribute外供学习到的决策树测试的属性列表。
    
-   ![image-20230502211803106](assets/image-20230502211803106.png)
+   * 输出：能正确分类给定Examples的决策树Root。
+   
+   * 伪代码
+   
+     ID3(Examples, Target_attribute, Attributes)
+   
+     1. 创建树的Root结点
+   
+     2. 如果Examples都为正，那么返回label= + 的单结点树Root
+   
+     3. 如果Examples都为反，那么返回label= - 的单结点树Root
+   
+     4. 如果Attributes为空，那么返回单结点树Root，label=Examples中最普遍的Target _attribute值
+   
+     5. 否则
+   
+        1. A←Attributes中分类 Examples 能力最好的属性
+   
+           > 具有最高信息增益的属性
+   
+        2. Root的决策属性←A
+   
+        3. 对于A的每个可能值v~i~;
+   
+           1. 在Root下加一个新的分支对应测试A=v~i~
+           2. 令 $Examples_{v_{i}}$ 为Examples中满足A属性值为v~i~的子集
+           3. 如果 $Examples_{v_{i}}$ 为空
+              1. 在这个新分支下加一个叶子结点，结点的label=Examples中最普遍的Target_attribute值
+              2. 否则在这个新分支下加一个子树 ID3( $Examples_{v_{i}}$ ,Target_attribute, Attributes-{A})
+   
+     6. 结束
+   
+     7. 返回Root
 
 ## 类比学习
 
@@ -2682,7 +2755,10 @@ todo
 3. 计算网络输出误差
 4. 计算各层误差信号
 5. 调整各层权值
-6. 检查网络总误差是否达到精度要求。满足，则训练结束；不满足，则返回步骤2
+6. 检查网络总误差是否达到精度要求。
+   1. 满足，则训练结束；
+   2. 不满足，则返回步骤2
+
 
 #### 程序流程图
 
@@ -2771,7 +2847,7 @@ Hopfield网络是一种具有正反相输出的带反馈人工神经元。
 
    > 这里所说的“机器”，指的就是计算机。
 
-3. 原因：现有的计算机系统和人工智能系统没有什么学习能力，至多也只有**非常有限**的学习能力，因而**不能满足**科技和生产提出的新要求。
+3. **原因**：现有的计算机系统和人工智能系统没有什么学习能力，至多也只有**非常有限**的学习能力，因而**不能满足**科技和生产提出的新要求。
 
 ### 6-2 试述机器学习系统的基本结构，并说明各部分的作用。
 
@@ -2820,7 +2896,7 @@ Hopfield网络是一种具有正反相输出的带反馈人工神经元。
 ### 看法
 
 * 人工智能在过去的几十年里取得了**巨大的进步**。随着计算能力的提高和大量数据的积累，深度学习和机器学习技术得到了**广泛的应用**。AI已经渗透到了诸如自动驾驶、医疗诊断、语言翻译、虚拟助手等许多行业。
-* 在未来，我们预期 AI 将在各个领域产生更多的影响，提高生产效率，改变人们的生活方式。 
+* 在未来，我们预期 AI 将在各个领域产生更多的影响，**提高生产效率**，**改变**人们的生**活方式**。 
 * 然而，AI发展也引发了一些关切。例如，隐私、数据安全、失业、道德伦理等问题需要解决。因此，政策制定者、研究人员和产业界需要共同努力，确保AI技术的安全、可靠、公平和透明。
 
 ### [研究热点](#1-11 人工智能的主要研究和应用领域是什么？其中，哪些是新的研究热点？)
