--- a/复习笔记.md
+++ b/复习笔记.md
@@ -411,6 +411,8 @@
 
 ##### 例2 猴子和香蕉问题✦
 
+> 有略微修改
+
 ![image-20230429204112872](assets/image-20230429204112872.png)
 
 1. 状态
@@ -426,21 +428,21 @@
 
    1. goto (U) ：表示猴子走到水平位置U
 
-      $(W,0,Y,z) \dfrac{goto(U)}{} (U,0,Y,z)$
+      $(W,0,Y,0) \dfrac{goto(U)}{} (U,0,Y,0)$
 
    2. pushbox (V) ：表示猴子把箱子推到水平位置V
 
       > 要应用算符pushbox（V），就要求规则的左边，猴子与箱子必须在同一位置上，并且，猴子不是箱子顶上。这种强加于操作的适用性条件，叫做产生式规则的**先决条件**。
 
-      $(W,0,W,z) \dfrac{pushbox(V)}{} (V,0,V,z)$
+      $(W,0,W,0) \dfrac{pushbox(V)}{} (V,0,V,0)$
 
    3. climbbox：猴子爬上箱顶
 
-      $(W,0,Y,z) \dfrac{climbbox}{} (W,1,Y,z)$
+      $(W,0,W,0) \dfrac{climbbox}{} (W,1,W,0)$
 
    4. grasp：表示猴子摘到香蕉
 
-      $(c,1,Y,z) \dfrac{grasp}{} (c,1,c,1)$
+      $(c,1,c,0) \dfrac{grasp}{} (c,1,c,1)$
 
 3. 状态空间
 
@@ -455,6 +457,10 @@
    3. 目标状态集合 G
 
       {(*c*，1，*c*，1)}
+
+4. 求解
+
+   > 总感觉这个图应该要展开画详细一点
 
    ![image-20230429211339198](assets/image-20230429211339198.png)
 
