--- a/复习笔记/笔记.md
+++ b/复习笔记/笔记.md
@@ -2582,7 +2582,7 @@ todo
    2. |ValueType(A~i~)|=k：属性A有k种不同的取值
 4. 从属性表中去掉已做检验的属性A;
 5. 对每一个i (l≤i≤k)，用 TR~i~，和新的属性表递归调用CLS，生成TR~i~的决策树DTR~i~;
-6. 返回以属性A为根，以DTR~1~，DTR~2~ ，…， DTR~k~为子树的决策树。
+6. 返回以**属性A为根**，以DTR~1~，DTR~2~ ，…， DTR~k~为子树的决策树。
 
 ##### 举例
 
@@ -2901,7 +2901,7 @@ Hopfield网络是一种具有正反相输出的带反馈人工神经元。
 ### 看法
 
 * 人工智能在过去的几十年里取得了**巨大的进步**。随着计算能力的提高和大量数据的积累，深度学习和机器学习技术得到了**广泛的应用**。AI已经渗透到了诸如自动驾驶、医疗诊断、语言翻译、虚拟助手等许多行业。
-* 在未来，我们预期 AI 将在各个领域产生更多的影响，**提高生产效率**，**改变**人们的生**活方式**。 
+* 在未来，我们预期 AI 将在各个领域产生更多的影响，**提高生产效率**，**改变**人们的**生活方式**。 
 * 然而，AI发展也引发了一些关切。例如，隐私、数据安全、失业、道德伦理等问题需要解决。因此，政策制定者、研究人员和产业界需要共同努力，确保AI技术的安全、可靠、公平和透明。
 
 ### [研究热点](#1-11 人工智能的主要研究和应用领域是什么？其中，哪些是新的研究热点？)
