--- a/复习笔记/笔记.md
+++ b/复习笔记/笔记.md
@@ -2482,8 +2482,8 @@ todo
 
 ### 4-14 试述遗传算法的基本原理，并说明遗传算法的求解步骤？
 
-1. [基本原理](#基本原理)
-2. [步骤](#遗传算法步骤)
+1. [基本原理](#基本原理✦)
+2. [步骤](#遗传算法步骤✦)
 
 ###  4-16 [用遗传算法求f(x)=xcosx+2的最大值※](https://blog.csdn.net/ErinWang666/article/details/126216970)
 
@@ -2870,7 +2870,7 @@ Hopfield网络是一种具有正反相输出的带反馈人工神经元。
 
 ### 6-4 决策树学习的主要学习算法
 
-[以ID3为例](#决策树学习算法ID3★)
+[以ID3为例](#决策树学习算法ID3✦)
 
 ###  6-8 试比较说明符号系统和连接机制在机器学习中的主要思想※
 
